--- a/nyan-adder-golang/home/index.html
+++ b/nyan-adder-golang/home/index.html
@@ -1,31 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nyanify</title>
-</head>
-<body>
-    <input type="text" id="input" placeholder="Enter a word">
-    <button onclick="nyanify()">Nyanify</button>
-    <p id="output"></p>
-
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <script src="wasm_exec.js"></script>
     <script>
-        async function nyanify() {
-            const inputElement = document.getElementById("input");
-            const outputElement = document.getElementById("output");
-
-            const go = new Go();
-            const wasmModule = await WebAssembly.instantiateStreaming(fetch("nyanify.wasm"), go.importObject);
-
-            go.run(wasmModule.instance);
-
-            const inputValue = inputElement.value;
-            const nyanifyFunc = wasmModule.instance.exports.nyanify;
-            const result = nyanifyFunc(inputValue);
-
-            outputElement.textContent = result;
-        }
+      const go = new Go();
+      WebAssembly.instantiateStreaming(
+        fetch('main.wasm'),
+        go.importObject
+      ).then((result) => {
+        go.run(result.instance);
+      });
     </script>
-</body>
+  </head>
+  <body>
+    <button id="btn">Call FuncName</button>
+    <script>
+      document.getElementById('btn').addEventListener('click', () => {
+        console.log(FuncName(1, [1, 2, 3, 4, 6]));
+      });
+    </script>
+  </body>
 </html>
