--- a/nyan-adder-golang/home/index.html
+++ b/nyan-adder-golang/home/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="preload" href="main.wasm" as="fetch" crossorigin="">
     <script src="wasm_exec.js"></script>
     <script>
       const go = new Go();
@@ -16,7 +17,7 @@
     <button id="btn">Call FuncName</button>
     <script>
       document.getElementById('btn').addEventListener('click', () => {
-        console.log(FuncName(1, [1, 2, 3, 4, 6]));
+        console.log(nyanify("test"));
       });
     </script>
   </body>
